syntax = "proto3";
package esw;

option java_package = "cz.esw.serialization.proto";
option java_multiple_files = true;

message PMeasurementInfo {
  int32 id = 1;
  int64 timestamp = 2;
  string measurerName = 3;
}

message PRecords {
  repeated double Download = 1;
  repeated double Upload = 2;
  repeated double Ping = 3;
}

message PRequestTuple {
  PMeasurementInfo measurementInfo = 1;
  PRecords records = 2;
}

message PMeasurementsRequest {
  repeated PRequestTuple requestTuple = 1;
}

message PAverage {
  double Download = 1;
  double Upload = 2;
  double Ping = 3;
}

message PResponseTuple {
  PMeasurementInfo measurementInfo = 1;
  PAverage average = 2;
}

message PMeasurementsResponse {
  repeated PResponseTuple responseTuple = 1;
}
